# AINewsBrief

./: .env.example  .gitignore  AGENT_REVIEW.md  CHANGELOG.md  Makefile  QUICKSTART.md  READINESS_ASSESSMENT.md  README.md  WINDOWS_SETUP.md  pyproject.toml  requirements.txt  run.bat  setup.bat  test.bat  test_new_sources.py
.github/workflows/: daily-brief.yml
docs/: GITHUB_ACTIONS_SETUP.md  LLM_PROVIDERS.md  QUICK_START_ACTIONS.md  X_YOUTUBE_SETUP.md
reports/: .gitkeep  ai-news-brief-2026-01-24.md  ai-news-brief-2026-01-25.md  seen_articles.json
scripts/: __init__.py  test_setup.py
src/: __init__.py  agent.py  config.py
src/analyzers/: __init__.py  deep_analyzer.py  llm_analyzer.py
src/formatters/: __init__.py  markdown_formatter.py  unified_formatter.py
src/graph/: __init__.py  nodes.py  state.py  workflow.py
src/models/: __init__.py  analysis.py  article.py  deep_analysis.py  report.py
src/tools/: __init__.py  api_fetcher.py  arxiv_fetcher.py  blog_fetcher.py  github_fetcher.py  rss_fetcher.py  telegram_sender.py  x_fetcher.py  youtube_fetcher.py
src/utils/: __init__.py  ai_filter.py  dedup_history.py  deduplication.py  feed_utils.py  logger.py  report_saver.py  retry.py
tests/: __init__.py  test_dedup_history.py  test_deduplication.py  test_fetchers.py  test_logger.py  test_models.py  test_new_fetchers.py  test_retry.py
